fabscanpi-server (0.2.0) unstable; urgency=medium

  * fixed issue #5, heavy CPU load
  * refactored system callings, introduced new utils for system calls
  * system call stdouts are in logs now
  * added meshalabserver support by calling via xvfb
  * fixed mpjeg close stream bug in chrome and firefox
  * added spinner to stream preview window
  * prepared frontend for laser stepper support
  * replaced threejs v70 by a newer version v74
  * refactored webgl directive, added support for switching between mesh and pointcloud (experimental)
  * refactored laser detection algorithm, it is more stable now.
  * refactored and extended share dialog options
  * made version number of firmware and server visible in main window
  * added calibration stream option
  * refactored httpRequestHandler


 -- Mario Lukas  <info@mariolukas.de>  Sat, 12 Mar 2016 01:11:11 +0000


fabscanpi-server (0.1.15) unstable; urgency=medium

  * added auto detection for arduino
  * fixed firmware autoflash bug, it finds the correct hex file now.
  * refactored and cleaned FSSerial.py
  * removed serial port from default config
  * added some additional connection messages to frontend
  * added override function for bassehttp logger to get cleaner logs

 -- Mario Lukas  <info@mariolukas.de>  Thu, 25 Feb 2016 20:54:11 +0000


fabscanpi-server (0.1.14) unstable; urgency=medium

  * fixed firmware motor reverse issue
  * fixed serial connection error for custom arduino installations.

 -- Mario Lukas  <info@mariolukas.de>  Thu, 23 Feb 2016 07:42:10 +0000

fabscanpi-server (0.1.13) unstable; urgency=medium

  * fixed issue #3 server hangs when laser not detected
  * fixed issue #12 internet connection is no longer needed, added font-awsome fonts to www
  * scanner does start even if serial or camera connection fails, a message is shown in frontend now
  * fixed mjepeg connection error bug, stack trace is not longer shown in log
  * fixed some bugs in FSCamera.py